FIX: left align in stylesheet instead of html

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -201,7 +201,7 @@ hr {
 
 table {
   width: 100%;
-  border: 1px solid #ebebeb;
+  border: 0px solid #ebebeb;
 }
 
 th {
@@ -210,7 +210,7 @@ th {
 
 td {
   border: 1px solid #ebebeb;
-  text-align: center;
+  text-align: left;
   font-weight: 300;
 }
 
